k8.v8.scripts/akopsa/l4_lb_test_1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-test-2
  namespace: application-test-1
spec:
  selector:
    matchLabels:
      app: application-test-pod-2
  replicas: 3
  template:
    metadata:
      labels:
        app: application-test-pod-2
    spec:
      containers:
      - name: nginx
        image: edp2harbor.psa.com.sg/nginx/nginx:latest
---
apiVersion: v1
kind: Service
metadata:
  name: service-test-2
  namespace: application-test-1
    #annotations:
    #nodeportlocal.antrea.io/enabled: "true"
spec:
  loadBalancerClass: ako.vmware.com/avi-lb
  type: LoadBalancer
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: application-test-pod-2
